liste ve img eklendi

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> ödev1 </title>
+    <title> ödev2 </title>
 </head>
 <body>
     <h1> Aybike Gökçen Karataş </h1> <!-- Header (1/en büyük/ - 6/en küçük/) -->
@@ -29,5 +29,32 @@
         Blanditiis earum rerum accusamus provident!
         <!-- daha fazla placeholder text (yazmaya üşendim, özür dilerim) -->
     </p>
+    
+    <br>
+    <h4> ilgi alanlarım </h4>
+    <ol>
+        <li> Kitap </li>
+        <ul>
+            <li> The Secret History - Donna Tartt </li>
+            <li> American Psycho - Bret Easton Ellis </li>
+            <li> No Longer Human - Osamu Dazai </li>
+        </ul>
+        <li> Film </li>
+        <ul>
+            <li> Dead Poets Society (1989) </li>
+            <li> Driven (2001) </li>
+            <li> Ground Control (1998) </li>
+        </ul>
+        <li> Dizi </li>
+        <ul>
+            <li> A Bit of Fry & Laurie </li>
+            <li> House M.D. </li>
+            <li> The Blacklist </li>
+        </ul>
+    </ol>
+
+    <br>
+    <h6> bunu niye ciddiye aldım bilmiyorum. </h6>
+    <img src="elmo.jpg" title="benim imza saydığım foto (derslerde her foto için kullanırım, artık benim sayılır)">
 </body>
 </html>
